Snap root surface to physical pixel

The root surface needs to be snapped if the shell surface uses chrome side caption.

This CL also removes "!allow_set_bounds_direct" check when
snapping the window in WindowState. This should have been removed
when we switched to relative surface hierarchy.

Bug: 836076
Test: manually tested with fractional scale factor.

Change-Id: Iadc06572279dec42f8d792424cee76481a94fd55
Reviewed-on: https://chromium-review.googlesource.com/1025371
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: David Reveman <reveman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553124}
Former-commit-id: 9225426bdc23969573e2b9f3ed7443865ef47539