components/exo/shell_surface_base.cc
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "ui/base/accelerators/accelerator.h"
 #include "ui/base/class_property.h"
 #include "ui/compositor/compositor.h"
+#include "ui/compositor/dip_util.h"
 #include "ui/compositor_extra/shadow.h"
 #include "ui/display/display.h"
 #include "ui/display/screen.h"
@@ -1352,6 +1353,11 @@ void ShellSurfaceBase::UpdateSurfaceBounds() {
       root_surface_origin().OffsetFromOrigin(), 1.f / GetScale()));
 
   host_window()->SetBounds(gfx::Rect(origin, host_window()->bounds().size()));
+  // The host window might have not been added to the widget yet.
+  if (host_window()->parent()) {
+    ui::SnapLayerToPhysicalPixelBoundary(widget_->GetNativeWindow()->layer(),
+                                         host_window()->layer());
+  }
 }
 
 void ShellSurfaceBase::UpdateShadow() {
